tests/snapshots/docx/apache-tika/testWORD_3imgs.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: None, id: None }
       2: Text { content: "The quick brown fox jumps over the lazy dog" }
       3: EndParagraph
       4: StartParagraph { alignment: None, id: None }
       5: Image { alt: Some("A description..."), decorative: false, id: None, title: None, asset: AssetDescriptor { asset_id: "zip://word/media/image2.png", content_type: "image/png", bytes: 4444, sha256: "c7ed7eaee12184fbae328aec72e7448b65c46296dbb04eae90e0bac9e0de9f32" } }
       6: EndParagraph
       7: StartParagraph { alignment: None, id: None }
       8: Text { content: "The Alfresco logo is above this" }
       9: EndParagraph
      10: StartParagraph { alignment: None, id: None }
      11: EndParagraph
      12: StartParagraph { alignment: None, id: None }
      13: Text { content: "More images follow...." }
      14: EndParagraph
      15: StartParagraph { alignment: None, id: None }
      16: Image { alt: Some("A description..."), decorative: false, id: None, title: None, asset: AssetDescriptor { asset_id: "zip://word/media/image3.jpeg", content_type: "image/jpeg", bytes: 4096, sha256: "f486449986f4268240df769e4ea18a8587bf11881a028be65f142abb437c1d84" } }
      17: Image { alt: Some("A description..."), decorative: false, id: None, title: None, asset: AssetDescriptor { asset_id: "zip://word/media/image4.png", content_type: "image/png", bytes: 18930, sha256: "05a62264c46e5475a2d1e6c12a4a0f506a606b8a810c89f7853550ee4b18887a" } }
      18: EndParagraph
      19: StartParagraph { alignment: None, id: None }
      20: EndParagraph
      21: StartParagraph { alignment: None, id: None }
      22: EndParagraph
      23: StartParagraph { alignment: None, id: None }
      24: Text { content: "The end!" }
      25: EndParagraph
      26: EndDocument
  ],
  terminal: Ok,
}
