tests/snapshots/docx/apache-tika/testWORD_EMFAndAttachments.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is test word document for parser." },
    Text { content: " " },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
