tests/snapshots/docx/apache-tika/testWORD_custom_props.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: None, id: None }
       2: Text { content: "Document content" }
       3: EndParagraph
       4: EndDocument
  ],
  terminal: Ok,
}
