tests/snapshots/docx/apache-tika/testWORD_embeded.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "The quick brown fox jumps over the lazy dog" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Image { alt: Some("A description..."), decorative: false, id: None, title: None, asset: AssetDescriptor { asset_id: "zip://word/media/image1.png", content_type: "image/png", bytes: 4444, sha256: "c7ed7eaee12184fbae328aec72e7448b65c46296dbb04eae90e0bac9e0de9f32" } },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "The Alfresco logo is above this" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "More images follow...." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Image { alt: Some("A description..."), decorative: false, id: None, title: None, asset: AssetDescriptor { asset_id: "zip://word/media/image2.jpeg", content_type: "image/jpeg", bytes: 4096, sha256: "f486449986f4268240df769e4ea18a8587bf11881a028be65f142abb437c1d84" } },
    Image { alt: Some("A description..."), decorative: false, id: None, title: None, asset: AssetDescriptor { asset_id: "zip://word/media/image3.png", content_type: "image/png", bytes: 18930, sha256: "05a62264c46e5475a2d1e6c12a4a0f506a606b8a810c89f7853550ee4b18887a" } },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "The end!" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
