tests/snapshots/docx/apache-tika/testWORD_features.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: Some(Left), id: None },
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt pretium d" },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "apibus" },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: ". Fusce quis dolor dui. Nullam eleifend nibh non dui sodales vulputate. Mauris id mollis velit. Fusce in sagittis nisl. Maecenas eget elit " },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "insert this " },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "fringilla, " },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "est eu, volutpat urna." },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "ad litora" },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "Maecenas ornare tortor velit, non ullamcorper turpis dapibus quis. " },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "While " },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "euismod posuere rhoncus. Duis mollis faucibus tincidunt. Praesent non facilisis orci, sodales hendrerit ipsum. Class aptent taciti sociosqu" },
    EndTextStyle,
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "torquent " },
    EndTextStyle,
    Text { content: "inceptos " },
    StartTextStyle { kind: TextColor(Rgb { b: 0, g: 0, r: 0 }), id: None },
    Text { content: "himenaeos." },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: Some(Left), id: None },
    LineBreak,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is hidden text." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
